force-app/main/default/objects/User__c/fields/Azure_UserId__c.field-meta.xml
<CustomField>
    <fullName>Azure_UserId__c</fullName>
    <label>Azure UserId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>