force-app/main/default/objects/User__c/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <label>Customer Code</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>