force-app/main/default/objects/User__c/fields/deviceRegistrationId__c.field-meta.xml
<CustomField>
    <fullName>deviceRegistrationId__c</fullName>
    <label>deviceRegistrationId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>