force-app/main/default/objects/User__c/fields/Forget_Password_Request_OTP__c.field-meta.xml
<CustomField>
    <fullName>Forget_Password_Request_OTP__c</fullName>
    <label>Forget Password Request OTP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>