force-app/main/default/objects/User__c/fields/Gate_Name__c.field-meta.xml
<CustomField>
    <fullName>Gate_Name__c</fullName>
    <label>Gate Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BG Gate 8</fullName>
            </value>
            <value>
                <fullName>BG Gate 1</fullName>
            </value>
            <value>
                <fullName>Aldhay Gate 1</fullName>
            </value>
            <value>
                <fullName>Aldhay Gate 2</fullName>
            </value>
            <value>
                <fullName>SS Gate A</fullName>
            </value>
            <value>
                <fullName>SS Gate B</fullName>
            </value>
            <value>
                <fullName>PV Gate 1</fullName>
            </value>
            <value>
                <fullName>BL Gate 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>