force-app/main/default/objects/User__c/fields/IntegrationMessage__c.field-meta.xml
<CustomField>
    <fullName>IntegrationMessage__c</fullName>
    <label>Integration Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>