force-app/main/default/objects/User__c/fields/Is_Azure_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Azure_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Azure Active</label>
    <type>Checkbox</type>
</CustomField>