force-app/main/default/objects/User__c/fields/Oid__c.field-meta.xml
<CustomField>
    <fullName>Oid__c</fullName>
    <label>Oid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>