force-app/main/default/objects/User__c/fields/Profile_Update_Request_OTP__c.field-meta.xml
<CustomField>
    <fullName>Profile_Update_Request_OTP__c</fullName>
    <label>Profile_Update_Request_OTP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>