force-app/main/default/objects/User__c/fields/Request_for_Email_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Request_for_Email_Amendment__c</fullName>
    <label>Request for Email Amendment</label>
    <type>Email</type>
</CustomField>