force-app/main/default/objects/User__c/fields/Request_for_Mobile_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Request_for_Mobile_Amendment__c</fullName>
    <label>Request_for_Mobile_Amendment</label>
    <type>Phone</type>
</CustomField>