force-app/main/default/objects/User__c/fields/User_Account__c.field-meta.xml
<CustomField>
    <fullName>User_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Users</relationshipName>
    <type>Lookup</type>
</CustomField>