force-app/main/default/objects/User__c/fields/User_Principal_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Principal_Name__c</fullName>
    <label>User Principal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>