force-app/main/default/objects/User__c/listViews/New_Owner.listView-meta.xml
<ListView>
    <fullName>New_Owner</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Azure_UserId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <filters>
        <field>User_Type__c</field>
        <operation>equals</operation>
        <value>Owner</value>
    </filters>
    <filters>
        <field>Azure_UserId__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>New Owner</label>
</ListView>